--- a/shoot/index.css
+++ b/shoot/index.css
@@ -4,6 +4,7 @@ body {
     text-align:center;
     height: 100vh;
     width: 100vw;
+    background-image:url(background.svg);
 }
 
 #mainContainer {
