--- a/shoot/index.css
+++ b/shoot/index.css
@@ -5,6 +5,7 @@ body {
     height: 100vh;
     width: 100vw;
     background-image: url(background.svg);
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
