--- a/shoot/index.css
+++ b/shoot/index.css
@@ -4,9 +4,7 @@ body {
     text-align:center;
     height: 100vh;
     width: 100vw;
-    background-image: url(background.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
+    background:#00ff55;
 }
 
 #mainContainer {
