--- a/rockPaper/game.css
+++ b/rockPaper/game.css
@@ -5,7 +5,7 @@ body {
     font-size:21px;
     margin:0 0 0 0;
     background-color:#ffffff;
-    background-image:url(https://i.imgur.com/25PFnQi.jpg);
+    background-image:url(https://i.postimg.cc/13KMhN7p/Pngtree-stage-3d-lighting-yellow-party-1156698.png);
 }
 button {
     font-size:17px;
