--- a/rockPaper/game.css
+++ b/rockPaper/game.css
@@ -4,6 +4,9 @@ body {
     font-family:'Roboto Mono', monospace;
     font-size:21px;
     margin:0 0 0 0;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     background-color:#ffffff;
     background-image:url(https://i.postimg.cc/13KMhN7p/Pngtree-stage-3d-lighting-yellow-party-1156698.png);
 }
