--- a/rockPaper/game.css
+++ b/rockPaper/game.css
@@ -6,6 +6,7 @@ body {
     margin:0 0 0 0;
     background-repeat: no-repeat;
     background-position: center;
+    color:#fff;
     background-size: cover;
     background-color:#ffffff;
     background-image:url(https://i.postimg.cc/13KMhN7p/Pngtree-stage-3d-lighting-yellow-party-1156698.png);
