--- a/rockPaper/game.css
+++ b/rockPaper/game.css
@@ -9,7 +9,7 @@ body {
     color:#fff;
     background-size: cover;
     background-color:#ffffff;
-    background-image:url(https://i.postimg.cc/13KMhN7p/Pngtree-stage-3d-lighting-yellow-party-1156698.png);
+    background-image:url(https://i.postimg.cc/d0yfM0dv/2055310.jpg);
 }
 button {
     font-size:17px;
