--- a/stickHero/index.css
+++ b/stickHero/index.css
@@ -2,11 +2,12 @@ html,
 body {
   height: 100%;
   margin: 0;
+  touch-action: none;
 }
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  cursor: pointer;
+  
 }
 
 .container {
