--- a/stickHero/index.css
+++ b/stickHero/index.css
@@ -51,14 +51,14 @@ body {
 }
 
 #start {
-  width: 120px;
-  height: 120px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   position:absolute;
   color: white;
-  background-color: red;
+  background-color: yellow;
   border: none;
-  top: 80%;
+  top: 75%;
   left: 30px;
   z-index: 9999;
   font-weight: 700;
