--- a/stickHero/index.css
+++ b/stickHero/index.css
@@ -56,7 +56,7 @@ body {
   border-radius: 50%;
   position:absolute;
   color: white;
-  background-color: yellow;
+  background-color: blue;
   border: none;
   top: 75%;
   left: 30px;
